// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs
Project UDS_Inventory {
  database_type: 'Postgresql'
  Note: 'UDS Inventory Hub Database'
}

Table users {
  id uuid [pk, default: `uuidv7()`]
  first_name varchar(50) [not null]
  last_name varchar(50) [not null]

  email varchar(256) [unique, not null]
  phone varchar(20) [unique, not null]

  password varchar(72) [not null]
  role users_role_enum [not null, default: 'intern']

 
  created_at timestamptz [default: `now()`]
  updated_at timestamptz [default: `now()`]

  Note {
    'This table keeps a record of all users for the api. A user can be an admin.'
  }
}


Table items{
  id uuid [pk, default: `uuidv7()`]
  name varchar(256) [not null]
  description text [not null]
  assigned_role users_role_enum [not null, default: 'admin']

  total int [not null, default: 0]
  available int [not null, default: 0]
  damaged int [not null, default: 0]
  in_use int [not null, default: 0]

  created_at timestamptz [default: `now()`]
  updated_at timestamptz [default: `now()`]
}

Table user_requests {
  id uuid [pk, default: `uuidv7()`]
  user_id uuid [not null]
  item_id uuid [ref: > items.id, not null]

  reviewed_at timestamptz [null]
  reviewed_by uuid [ref: > users.id, not null]
  
  returned_at timestamptz [null]
  status request_status_enum [not null, default: 'pending']
  quantity int [not null, default: 1]
  due_date timestamptz [default: `now() + '7 day'::interval`]


  created_at timestamptz [default: `now()`]
  updated_at timestamptz [default: `now()`]

  Note {
    'This table links users to the items they want to request'
  }
  indexes {
    (user_id, item_id) [pk]
    
    // This is a partial index in PostgreSQL: WHERE returned_at is not null
    status [name: 'idx_user_requests_status_active']
    
    // This is a partial index in PostgreSQL: WHERE status ='approved' AND returned_at IS NULL
    (user_id, item_id) [unique, name: 'idx_user_borrowed_item']
  }
}
Ref: user_requests.user_id > users.id [delete: cascade]

enum request_status_enum {
  pending
  approved
  rejected
  returned
}

Table guests {
  id uuid [pk, default: `uuidv7()`]
  firstname varchar(50) [not null]
  lastname varchar(50) [not null]

  email varchar(256) [unique, not null]
  phone varchar(20) [unique, not null]

  reviewed_at timestamptz [null]
  reviewed_by uuid [ref: > users.id, not null]
  

  request text [not null]

  created_at timestamptz [default: `now()`]
  updated_at timestamptz [default: `now()`]
}


Table guest_requests {
  id uuid [pk, default: `uuidv7()`]
  guest_id uuid [not null]
  item_id uuid [ref: > items.id, not null]

  status request_status_enum [not null, default: 'approved']
  returned_at timestamptz [null]
  quantity int [not null, default: 1]
  due_date timestamptz [default: `now() + '7 day'::interval`]

  created_at timestamptz [default: `now()`]
  updated_at timestamptz [default: `now()`]

  Note {
    'This table links guests to the items they want to request'
  }
  indexes {

    // This is a partial index in PostgreSQL: WHERE returned_at is not null
    status [name: 'idx_guest_requests_status_active']
  }

}

Ref: guest_requests.guest_id > guests.id [delete: cascade]


enum users_role_enum {
  guest
  intern
  staff
  admin
}